[package]
name = "attestation"
version = "0.1.0"
authors = ["Jyotsna <jyotsnap@bu.edu>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx = { path = "../sgx" }

[patch.crates-io]
openssl = { git = 'https://github.com/npmccallum/rust-openssl', branch='patch' }
